--- a/src/app/home/b2b-flows-manage/b2b-flows-manage.component.html
+++ b/src/app/home/b2b-flows-manage/b2b-flows-manage.component.html
@@ -99,33 +99,38 @@
 
 <div *ngIf="contextMenuStyle" class="available-nodes-dropdown bg-white position-fixed border rounded"
     [ngStyle]="contextMenuStyle" odpClickOutside (outside)="contextMenuStyle=null">
-   <div *ngIf="isProcessFlow">
-    <div class="node-item border-bottom pl-3 pr-2 py-2 d-flex align-items-center justify-content-between hover" (click)="addNode($event,'SYSTEM')">
-        <div class="d-flex align-items-center">
-            <span class="node-icon font-16 fw-400 dsi dsi-flow mr-2"></span>
-            <span class="font-13 fw-400">System Task</span>
+    <div *ngIf="isProcessFlow">
+        <div class="node-item border-bottom pl-3 pr-2 py-2 d-flex align-items-center justify-content-between hover"
+            (click)="addNode($event,'SYSTEM')">
+            <div class="d-flex align-items-center">
+                <span class="node-icon font-16 fw-400 dsi dsi-flow mr-2"></span>
+                <span class="font-13 fw-400">System Task</span>
+            </div>
+        </div>
+        <div class="node-item border-bottom pl-3 pr-2 py-2 d-flex align-items-center justify-content-between hover"
+            (click)="addNode($event,'USER')">
+            <div class="d-flex align-items-center">
+                <span class="node-icon font-16 fw-400 dsi dsi-flow mr-2"></span>
+                <span class="font-13 fw-400">User Task</span>
+            </div>
+        </div>
+        <div class="node-item border-bottom pl-3 pr-2 py-2 d-flex align-items-center justify-content-between hover"
+            (click)="addNode($event,'EVENT')">
+            <div class="d-flex align-items-center">
+                <span class="node-icon font-16 fw-400 dsi dsi-flow mr-2"></span>
+                <span class="font-13 fw-400">Event Trigger</span>
+            </div>
+        </div>
+        <div class="node-item border-bottom pl-3 pr-2 py-2 d-flex align-items-center justify-content-between hover"
+            (click)="addNode($event,'DECISION')">
+            <div class="d-flex align-items-center">
+                <span class="node-icon font-16 fw-400 dsi dsi-flow mr-2"></span>
+                <span class="font-13 fw-400">Decision</span>
+            </div>
         </div>
     </div>
-    <div class="node-item border-bottom pl-3 pr-2 py-2 d-flex align-items-center justify-content-between hover" (click)="addNode($event,'USER')">
-        <div class="d-flex align-items-center">
-            <span class="node-icon font-16 fw-400 dsi dsi-flow mr-2"></span>
-            <span class="font-13 fw-400">User Task</span>
-        </div>
-    </div>
-    <div class="node-item border-bottom pl-3 pr-2 py-2 d-flex align-items-center justify-content-between hover" (click)="addNode($event,'EVENT')">
-        <div class="d-flex align-items-center">
-            <span class="node-icon font-16 fw-400 dsi dsi-flow mr-2"></span>
-            <span class="font-13 fw-400">Event Trigger</span>
-        </div>
-    </div>
-    <div class="node-item border-bottom pl-3 pr-2 py-2 d-flex align-items-center justify-content-between hover" (click)="addNode($event,'DECISION')">
-        <div class="d-flex align-items-center">
-            <span class="node-icon font-16 fw-400 dsi dsi-flow mr-2"></span>
-            <span class="font-13 fw-400">Decision</span>
-        </div>
-    </div>
-   </div>
-    <div class="node-item border-bottom pl-3 pr-2 py-2 d-flex align-items-center justify-content-between hover"  *ngIf="!isProcessFlow">
+    <div class="node-item border-bottom pl-3 pr-2 py-2 d-flex align-items-center justify-content-between hover"
+        *ngIf="!isProcessFlow">
         <div class="d-flex align-items-center">
             <span class="node-icon font-16 fw-400 dsi dsi-file mr-2"></span>
             <span class="font-13 fw-400">File</span>
@@ -148,7 +153,8 @@
             </div> -->
         </div>
     </div>
-    <div class="node-item border-bottom pl-3 pr-2 py-2 d-flex align-items-center justify-content-between hover" *ngIf="!isProcessFlow">
+    <div class="node-item border-bottom pl-3 pr-2 py-2 d-flex align-items-center justify-content-between hover"
+        *ngIf="!isProcessFlow">
         <div class="d-flex align-items-center">
             <span class="node-icon font-16 fw-400 dsi dsi-invoke-api mr-2"></span>
             <span class="font-13 fw-400">API</span>
@@ -181,7 +187,8 @@
             </div>
         </div>
     </div>
-    <div class="node-item border-bottom pl-3 pr-2 py-2 d-flex align-items-center justify-content-between hover" *ngIf="!isProcessFlow">
+    <div class="node-item border-bottom pl-3 pr-2 py-2 d-flex align-items-center justify-content-between hover"
+        *ngIf="!isProcessFlow">
         <div class="d-flex align-items-center">
             <span class="node-icon font-16 fw-400 dsi dsi-function alt mr-2"></span>
             <span class="font-13 fw-400">Process</span>
@@ -204,7 +211,8 @@
             </div>
         </div>
     </div>
-    <div class="node-item border-bottom pl-3 pr-2 py-2 d-flex align-items-center justify-content-between hover" *ngIf="!isProcessFlow">
+    <div class="node-item border-bottom pl-3 pr-2 py-2 d-flex align-items-center justify-content-between hover"
+        *ngIf="!isProcessFlow">
         <div class="d-flex align-items-center">
             <span class="node-icon font-16 fw-400 dsi dsi-join mr-2"></span>
             <span class="font-13 fw-400">Transform</span>
@@ -215,6 +223,11 @@
                 (click)="addNode($event,'MAPPING')">
                 <span class="node-icon font-16 fw-400 dsi dsi-mapping mr-2"></span>
                 <span class="font-13 fw-400">Mapping</span>
+            </div>
+            <div class="node-item border-bottom pl-3 pr-2 py-2 d-flex align-items-center hover"
+                (click)="addNode($event,'CONVERT_JSON_JSON')">
+                <span class="node-icon font-16 fw-400 dsi dsi-refresh text-secondary mr-2"></span>
+                <span class="font-13 fw-400">Converter</span>
             </div>
             <div class="node-item border-bottom pl-3 pr-2 py-2 d-flex align-items-center hover"
                 (click)="addNode($event,'DEDUPE')">
@@ -330,5 +343,5 @@
         <span class="font-13 fw-400">Global Error</span>
     </div>
 
-    
+
 </div>
