--- a/src/app/home/b2b-flows-manage/flow-volume-mounts/flow-volume-mounts.component.scss
+++ b/src/app/home/b2b-flows-manage/flow-volume-mounts/flow-volume-mounts.component.scss
@@ -14,6 +14,10 @@
             min-height: 32px;
             max-height: 32px;
             padding: 5px;
+            &.name {
+                min-width: 220px;
+                max-width: 220px;
+            }
         }
     }
 
